--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
-    "archipelago.js": "^2.0.4"
+    "archipelago.js": "^2.0.4",
+    "stickranger-ap": "file:"
   }
 }
